--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/.terraform
+.terraform/
+*.managed.publishsettings
+.terraform.tfstate.lock.info
+terraform.tfstate
+terraform.tfstate.backup
 .terraform.lock.hcl
-*.tfstate
-*.tfstate.backup
-crash.log
